update el finquero, 18/06/2020 day

--- a/NinthClass/NinthClass.html
+++ b/NinthClass/NinthClass.html
@@ -8,8 +8,8 @@
     <p>
       <img src="Assets/cajero.webp">
     </p>
-    <input type="text" id="Money" name="" value="">
-    <input type="button" name="" value="get">
-    <script src="text/javascript"></script>
+    <input type="number" id="Money" name="" value="">
+    <input type="button" name="" value="get" id="get">
+    <script src="NinthClass.js"></script>
   </body>
 </html>
